# AvtecGmock

./: CMakeLists.txt  README.md  Toolchain-GCC-ARM.cmake  Toolchain-GCC-x86_64.cmake  conanfile.py
src/: .directory  CMakeLists.txt
src/googlemock/: CMakeLists.txt
